--- a/angular-front-end/src/app/list-todos/list-todos.component.html
+++ b/angular-front-end/src/app/list-todos/list-todos.component.html
@@ -1,3 +1,18 @@
-<p>
-  list-todos works!
-</p>
+<table border="1">
+
+  <caption>My Todo's</caption>
+  <thead>
+    <tr>
+      <th>Id</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+      <td>{{todo.id}}</td>
+      <td>{{todo.description}}</td>
+    </tr>
+  </tbody>
+
+</table>
