--- a/angular-front-end/src/app/welcome/welcome.component.html
+++ b/angular-front-end/src/app/welcome/welcome.component.html
@@ -1,1 +1,6 @@
-Be Welcome {{name}}!! 
+<div>
+    Be Welcome {{name}}!!
+</div>
+<div>
+    You can manage your todos <a routerLink="/todos">here.</a>
+</div>
