add top menu and footer

--- a/angular-front-end/src/app/app.component.html
+++ b/angular-front-end/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-welcome></app-welcome>
 <div>Component Content</div>
 -->
-
+<app-menu></app-menu>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
