--- a/angular-front-end/src/app/list-todos/list-todos.component.html
+++ b/angular-front-end/src/app/list-todos/list-todos.component.html
@@ -3,16 +3,18 @@
   <caption>My Todo's</caption>
   <thead>
     <tr>
-      <th>Id</th>
       <th>Description</th>
+      <th>Target Date</th>
+      <th>Done?</th>
     </tr>
   </thead>
 
   <tbody>
     <!-- ng directive, possibilita aplicar lógica nas tags html. -->
     <tr *ngFor="let todo of todos">
-      <td>{{todo.id}}</td>
       <td>{{todo.description}}</td>
+      <td>{{todo.targetDate | date}}</td>
+      <td>{{todo.done}}</td>
     </tr>
   </tbody>
 
