--- a/angular-front-end/src/app/menu/menu.component.html
+++ b/angular-front-end/src/app/menu/menu.component.html
@@ -1,2 +1,23 @@
-TOP MENU ELEMENTS
-<br><br>
+<header>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    
+    <ul class="navbar-nav">
+      <li>
+        <a href="/welcome/gabriel" class="nav-link">Home</a>
+      </li>
+      <li>
+        <a href="/todos" class="nav-link">Todos</a>
+      </li>
+    </ul>
+    
+    <ul class="navbar-nav navbar-collapse justify-content-end">
+      <li>
+        <a href="/login" class="nav-link">login</a>
+      </li>
+      <li>  
+        <a href="/logout" class="nav-link">logout</a>
+      </li>
+    </ul>
+
+  </nav>
+</header>
