applying css bootstrap into the rest of the components

--- a/angular-front-end/src/app/welcome/welcome.component.html
+++ b/angular-front-end/src/app/welcome/welcome.component.html
@@ -1,6 +1,5 @@
-<div>
-    Be Welcome {{name}}!!
-</div>
-<div>
-    You can manage your todos <a routerLink="/todos">here.</a>
+<h1>Welcome!</h1>
+
+<div class="container">
+    Be Welcome {{name}}!!. You can manage your todos <a routerLink="/todos">here.</a>
 </div>
