--- a/angular-front-end/src/app/app.component.html
+++ b/angular-front-end/src/app/app.component.html
@@ -3,5 +3,9 @@
 <div>Component Content</div>
 -->
 <app-menu></app-menu>
-<router-outlet></router-outlet>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
+
 <app-footer></app-footer>
