--- a/angular-front-end/src/app/footer/footer.component.html
+++ b/angular-front-end/src/app/footer/footer.component.html
@@ -1,2 +1,5 @@
-<br><br>
-FOOTER
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">All Rights Reserved 2020 @GabrielGFW</span>
+  </div>
+</footer>
