--- a/angular-front-end/src/app/menu/menu.component.html
+++ b/angular-front-end/src/app/menu/menu.component.html
@@ -3,19 +3,19 @@
     
     <ul class="navbar-nav">
       <li>
-        <a routerLink="/welcome/gabriel" class="nav-link">Home</a>
+        <a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/welcome/gabriel" class="nav-link">Home</a>
       </li>
       <li>
-        <a routerLink="/todos" class="nav-link">Todos</a>
+        <a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/todos" class="nav-link">Todos</a>
       </li>
     </ul>
     
     <ul class="navbar-nav navbar-collapse justify-content-end">
       <li>
-        <a routerLink="/login" class="nav-link">login</a>
+        <a *ngIf="!hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/login" class="nav-link">login</a>
       </li>
       <li>  
-        <a routerLink="/logout" class="nav-link">logout</a>
+        <a *ngIf="hardcodedAuthenticationService.isUserLoggedIn()" routerLink="/logout" class="nav-link">logout</a>
       </li>
     </ul>
 
