fix on routes, add welcome new components not working yet

--- a/angular-front-end/src/app/welcome/welcome.component.html
+++ b/angular-front-end/src/app/welcome/welcome.component.html
@@ -3,3 +3,8 @@
 <div class="container">
     Be Welcome {{name}}!!. You can manage your todos <a routerLink="/todos">here.</a>
 </div>
+
+<div class="container">
+    Clicke here to get a customized welcome message.
+    <button (click)="getWelcomeMessage()">Welcome Message</button>
+</div>
