config http request for welcome page

--- a/angular-front-end/src/app/welcome/welcome.component.html
+++ b/angular-front-end/src/app/welcome/welcome.component.html
@@ -6,5 +6,5 @@
 
 <div class="container">
     Clicke here to get a customized welcome message.
-    <button (click)="getWelcomeMessage()">Welcome Message</button>
+    <button (click)="getWelcomeMessage()" class="btn btn-success">Welcome Message</button>
 </div>
