--- a/angular-front-end/src/app/welcome/welcome.component.html
+++ b/angular-front-end/src/app/welcome/welcome.component.html
@@ -8,3 +8,8 @@
     Clicke here to get a customized welcome message.
     <button (click)="getWelcomeMessage()" class="btn btn-success">Welcome Message</button>
 </div>
+
+<div class="container" *ngIf="welcomeMessageFromService">
+    <h2>Your customized welcome message:</h2> <br>
+    {{welcomeMessageFromService}}
+</div>
