--- a/angular-front-end/src/app/welcome/welcome.component.html
+++ b/angular-front-end/src/app/welcome/welcome.component.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     Clicke here to get a customized welcome message.
-    <button (click)="getWelcomeMessage()" class="btn btn-success">Welcome Message</button>
+    <button (click)="getWelcomeMessageWithParameter()" class="btn btn-success">Welcome Message</button>
 </div>
 
 <div class="container" *ngIf="welcomeMessageFromService">
