--- a/angular-front-end/src/app/list-todos/list-todos.component.html
+++ b/angular-front-end/src/app/list-todos/list-todos.component.html
@@ -1,4 +1,7 @@
 <h1>My Todo's</h1>
+
+<div class="alert alert-success" *ngIf='message'>{{message}}</div>
+
 <div class="container">
   <table class="table">
 
@@ -17,6 +20,7 @@
         <td>{{todo.description}}</td>
         <td>{{todo.targetDate | date}}</td>
         <td>{{todo.done}}</td>
+        <td><button (click)="deleteTodo(todo.id)" class="btn btn-warning">Delete Todo</button></td>
       </tr>
     </tbody>
 
